@@ -133,6 +133,7 @@ COMMON_SDCC = \
   __assert.c \
   time.c \
   __stdc_count_trailing_onesull.c \
+  __stdc_first_trailing_oneull.c \
   __stdc_count_onesull.c \
   __stdc_bit_widthull.c \
   __stdc_bit_ceilull.c
